# esktech-sso

./: .env  .env-example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  connect-gitlab-sso.sh  docker-compose-gitlab.yml  docker-compose-jira.yml  docker-compose.yml  generate-certs.sh  generate_rsa_keys.sh  pyproject.toml  requirements.txt  server.crt  server.key  test.txt
.github/ISSUE_TEMPLATE/: bug_report.md
app/: .env  __init__.py  auth_server.py  config.py  constants.py  log.py  main.py  oidc_server.py  test.db
app/auth/: ldap_client.py  password_validator.py  user_source.py
app/db/: crud.py  database.py  models.py  oauth.py  users.py
app/db/models/: auth_models.py  user_models.py
app/endpoints/: admin.py  health.py  oidc.py  users.py
app/endpoints/oidc/: oidc_api.py
app/endpoints/v0/: admin.py  health.py  oidc.py  profile.py  users.py
app/frontend/templates/: __init__.py  admin_clients.html  login.html  profile.html
app/locale/: doc.txt
app/models/: general.py  msg.py  users.py
app/schemas/: users.py
app/services/: db_pool.py  localization.py  redis_srv.py  sources.py  user_service.py
app/services/pool/: db_pool.py  redis_pool.py
app/templates_static/: admin_clients.html  admin_user_form.html  admin_users.html  login.html
app/tests/: config_tests_sample.py  conftest.py
app/tests/e2e/: test_auth_flow.py  test_jwt_verification.py  test_ldap_flow.py  (+2 more)
app/utils/: cli.py  jwt.py  ldap_client.py  license.py  limits.py  password_validator.py  rsa_keys.py  secrets.py  user_source.py
docs/: CHANGELOG.md
docs/versions/: version_0_1_alpha.md
(+19 files in other folders)
