[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esktech-sso"
version = "0.1.0"
description = "EskTech SSO — lightweight corporate SSO in Python with OIDC, LDAP, and JWT support. Open Core. Community Edition — free. Enterprise Edition — with adapters for 1C, Bitrix24, and other systems."
authors = [{name = "Baysiev Eskander", email = "eskander5765@yandex.ru"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "authlib==1.7.0",
    "sqlalchemy[asyncpg]==2.0.35",
    "alembic==1.13.0",
    "jinja2==3.1.4",
    "python-ldap==3.4.4",
    "bcrypt==4.2.0",
    "redis==5.0.1",
    "python-dotenv==1.0.1",
    "pydantic-settings==2.4.0",
    "cryptography>=45.0.1",
    "aiosqlite==0.20.0",
    "httpx==0.27.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "itsdangerous==2.2.0",
    "asyncpg==0.29.0",
    "ruff>=0.15.8",
    "mypy>=1.19.1",
    "python-multipart>=0.0.27",
    "pyjwt>=2.12.1",
    "ldap3>=2.9.1",
    "podman>=5.8.0"
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::PendingDeprecationWarning:starlette.formparsers",
    "ignore::UserWarning:jwt.api_jwt",
    'ignore:The `name` is not the first parameter:DeprecationWarning:starlette'
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff.lint]
ignore = ["B008"]
